@@ -1,5 +1,15 @@
 ------------------------------------------------------------------------
-r1229 | gaser | 2017-11-29 22:03:12
+r1230 | gaser | 2017-11-30 09:23:55
+
+Changed paths:
+M       CHANGES.txt
+M       cat_surf_createCS.m
+M       cat_surf_info.m
+
+Fixed: Handling with multiple 32k meshes in cat_surf_info.m
+
+------------------------------------------------------------------------
+r1229 | gaser | 2017-11-29 22:03:22 +0100 (Mi, 29 Nov 2017) | 13 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -13,6 +23,7 @@ M       cat_vol_nonlin_coreg_multi_run.m
     mapping of (co-registered) volumes to surface in native space.
 (2) Changed: Removed experimental code for combining non-linear co-registration
     and volume mapping that did not worked.
+
 ------------------------------------------------------------------------
 r1228 | gaser | 2017-11-29 19:21:06 +0100 (Mi, 29 Nov 2017) | 10 lines
 
